trunk/Archive2/1c/c2abed79e0b4e7/output
clang
main.cpp:8:5: error: attempt to use a deleted function
    B() noexcept {};
    ^
main.cpp:4:5: note: '~A' has been explicitly marked deleted here
    ~A() = delete;
    ^
1 error generated.
g++
main.cpp: In constructor 'B::B()':
main.cpp:8:18: error: use of deleted function 'A::~A()'
     B() noexcept {};
                  ^
main.cpp:4:5: note: declared here
     ~A() = delete;
     ^
